# bulk-downloader-for-reddit-x

./: .gitattributes  .gitignore  .markdown_style.rb  .markdownlint.json  .mdlrc  .pre-commit-config.yaml  README.md  dev-requirements.txt  opts_example.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  site-support-request.md  site-support-request.yml
.github/workflows/: formatting_check.yml  linting.yml  other_linting.yml  protect_master.yml  publish.yml  python_linting.yml  scripts-test.yml  security.yml  test.yml
bdfr/: __init__.py  __main__.py  archiver.py  cloner.py  completion.py  configuration.py  connector.py  default_config.cfg  download_filter.py  downloader.py  exceptions.py  file_name_formatter.py  oauth2.py  resource.py  site_authenticator.py
bdfr/archive_entry/: base_archive_entry.py  comment_archive_entry.py  submission_archive_entry.py
bdfr/site_downloaders/: base_downloader.py  delay_for_reddit.py  direct.py  download_factory.py  erome.py  gallery.py  gfycat.py  imgur.py  pornhub.py  redgifs.py  self_post.py  vidble.py  vreddit.py  youtube.py
bdfr/site_downloaders/fallback_downloaders/: fallback_downloader.py  youtubedl_fallback.py  ytdlp_fallback.py
bdfrx/: __init__.py  __main__.py  bdfrx.db  completion.py  configuration.py  connector.py  default_config.cfg  download_filter.py  downloader.py  exceptions.py  file_name_formatter.py  oauth2.py  resource.py  site_authenticator.py
bdfrx/site_downloaders/: base_downloader.py  catbox.py  chevereto.py  delay_for_reddit.py  direct.py  download_factory.py  erome.py  flickr.py  gallery.py  gfycat.py  imgchest.py  imgur.py  nsfw_pics.py  pornhub.py  redgifs.py  self_post.py  vidble.py  vreddit.py  youtube.py
bdfrx/site_downloaders/fallback_downloaders/: fallback_downloader.py  ytdlp_fallback.py
devscripts/: configure.ps1  configure.sh
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
scripts/: README.md  extract_failed_ids.ps1  extract_failed_ids.sh  extract_successful_ids.ps1  extract_successful_ids.sh  print_summary.ps1  print_summary.sh  unsaveposts.py
scripts/tests/: extract_failed_ids.Tests.ps1  extract_successful_ids.Tests.ps1  test_extract_failed_ids.bats  test_extract_successful_ids.bats
scripts/tests/example_logfiles/: failed_disabled_module.txt  failed_no_downloader.txt  failed_resource_error.txt  failed_sitedownloader_error.txt  failed_write_error.txt  succeed_already_exists.txt  succeed_download_filter.txt  succeed_downloaded_submission.txt  succeed_hard_link.txt  succeed_resource_hash.txt  succeed_score_filter.txt
tests/: conftest.py  test_archiver.py  test_completion.py  test_configuration.py  test_connector.py  test_download_filter.py  test_downloader.py  test_file_name_formatter.py  test_oauth2.py  test_resource.py  yaml_test_configuration.yaml
tests/archive_entry/: test_comment_archive_entry.py  test_submission_archive_entry.py
tests/integration_tests/: test_archive_integration.py  test_clone_integration.py  test_download_integration.py
tests/site_downloaders/: test_catbox.py  test_chevereto.py  test_delay_for_reddit.py  test_direct.py  test_download_factory.py  test_erome.py  test_flickr.py  test_gallery.py  test_gfycat.py  test_imgchest.py  test_imgur.py  test_nsfw_pics.py  test_pornhub.py  test_redgifs.py  test_self_post.py  test_vidble.py  test_vreddit.py  test_youtube.py
tests/site_downloaders/fallback_downloaders/: test_youtubedl_fallback.py  test_ytdlp_fallback.py
